Add delete (#21)
* Update service clients
* Add delete functionality
